# btle_nrf24l01

./: README.md
control_ymfc_mini_drone/recv_ppm/: BTLE.cpp  BTLE.h  RF24_config.h  recv_ppm.ino
control_ymfc_mini_drone/send_hackrf/: CMakeLists.txt
control_ymfc_mini_drone/send_hackrf/btle-tools/: CMakeLists.txt
control_ymfc_mini_drone/send_hackrf/btle-tools/src/: CMakeLists.txt  btle_tx.c.bak  btle_tx.cc  gauss_cos_sin_table.hh
nano_rf/recv/: recv.ino
nano_rf/send/: send.ino
recv/: BTLE.cpp  RF24.h  nRF24L01.h  recv.ino
send/: BTLE.cpp  RF24.cpp  printf.h  send.ino
send_simpified/: send_simpified.ino
